FIX align boutton version mobile

--- a/css/middle.css
+++ b/css/middle.css
@@ -186,7 +186,10 @@
 @media (max-width: 767px) {
 
    .text-biberon{
-        display:none;
+    display: none;
+    /*top: 20%;
+    font-size: 18pt;
+    line-height: 30px;*/
    }
    .container-gal{
     
@@ -211,9 +214,8 @@
     font-family: Arial;
     font-weight: bold;
     font-size: 12px;
-    text-align: left;
+    text-align: right;
     padding-right: 0%;
-    padding-left: 2%;
     padding-top: 4px;
     padding-bottom: 0%;
     color: #ffffff;
@@ -248,6 +250,10 @@
     line-height: 20px;
     font-size: 8pt;
     margin-left: 0px;
+    }
+
+    .text-biberon{
+    display: none;
     }
 }
 
